--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --color-bg: #ffc6e3;         /* Soft pink */
-    --color-bg-dark: #ff9ecf;    /* Deeper rosy pink */
+    --color-bg: #ffc6e3;
+    --color-bg-dark: #ff9ecf;
     --color-text: #6a0572;
 }
 
